--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://localhost:5000",
+  "proxy": "http://httpbin.org",
   "jest": {
     "roots": [
       "<rootDir>/src"
